--- a/delivery/templates/delivery/base-generation.html
+++ b/delivery/templates/delivery/base-generation.html
@@ -43,7 +43,7 @@
                     <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">company</a></li>
                     <li class="nav__item"><a href="{% url 'vehisles' %}?filters=off" class="nav__link">vehisles</a></li>
-                    <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">news</a></li>
+                    <li class="nav__item"><a href="{% url 'news' %}?ordering=off" class="nav__link">news</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
                 </ul>
             </nav>
