--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1389,7 +1389,7 @@ body {
 }
 
 .news-content__text-container {
-	padding: 10px;
+	padding: 10px 10px 20px 10px;
 }
 
 .news-content__header {
@@ -1423,10 +1423,28 @@ body {
 	color: rgba(0, 0, 0, .8);
 }
 
+.news-content__views {
+	position: absolute;
+	bottom: 5px;
+	left: 10px;
+	font-size: 13px;
+	color: rgba(0, 0, 0, .8);
+
+	i {
+		font-size: 90%;
+		margin-right: 4px;
+	}
+}
+
 .ordering {
 	max-width: 1336px;
 	margin: 30px auto;
 	padding: 0 5px;
+
+	.tags {
+		padding: 0;
+		width: 100%;
+	}
 }
 
 .ordering__list {
@@ -1440,12 +1458,13 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0 10px 10px 0;
+	margin: 0 20px 10px 0;
 }
 
 .ordering__label {
 	display: inline-block;
 	transform: rotate(-90deg);
+	margin-left: -7px;
 	width: 30px;
 	height: 16px;
 	border-radius: 3px;
@@ -1479,7 +1498,7 @@ body {
 }
 
 .ordering__submit {
-	margin-left: 10px;
+	margin: 20px 10px 0 0;
 	height: 30px;
 	font-size: 14px;
 	text-transform: uppercase;
@@ -1497,10 +1516,112 @@ body {
 	cursor: pointer;
 }
 
+.ordering__reset {
+	margin: 20px 10px 0 0;
+	height: 30px;
+	line-height: 30px;
+	font-size: 14px;
+	text-transform: uppercase;
+	padding: 0 5px;
+	border: 0;
+	border-radius: 3px;
+	background-color: $primary-color-light-blue;
+	text-decoration: none;
+	color: #ffffff;
+	transition: 200ms;
+}
+
+.ordering__reset:hover {
+	background-color: $primary-color-dark-blue;
+	transition: 200ms;
+}
+
+.tags {
+	max-width: 1336px;
+	margin: 10px auto 0 auto;
+	padding: 0 5px;
+}
+
+.tags__header {
+	display: inline-block;
+	margin-bottom: 10px;
+	text-transform: uppercase;
+	font-family: $montserrat-bold-font;
+	font-size: 16px;
+}
+
+.tags__open-button {
+	display: inline-block;
+	margin-left: 5px;
+	transform: rotate(-90deg);
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	border-radius: 2px;
+	text-align: center;
+	color: #ffffff;
+	background-color: $primary-color-light-blue;
+	transition: 200ms;
+}
+
+.tags__open-button:hover {
+	background-color: $primary-color-dark-blue;
+	transition: 200ms;
+	cursor: pointer;
+}
+
+.tags__open-button.open {
+	transform: rotate(90deg);
+	transition: 200ms;
+}
+
+.tags__list {
+	max-height: 0;
+	overflow: hidden;
+	transition: .6s;
+}
+
+.tags__list.open {
+	max-height: 1000px;
+	transition: .6s;
+}
+
+.tags__item {
+	display: inline-block;
+	margin-bottom: 5px;
+}
+
+.tags__label {
+	display: block;
+	padding: 3px;
+	font-size: 14px;
+	text-transform: uppercase;
+	border: 1px solid $primary-color-light-blue;
+	border-radius: 4px;
+	color: $primary-color-dark-blue;
+	transition: 200ms;
+}
+
+.tags__label:hover {
+	color: #ffffff;
+	background-color: $primary-color-light-blue;
+	transition: 200ms;
+	cursor: pointer;
+}
+
+.tags__checkbox:checked + label {
+	background-color: $primary-color-light-blue;
+	color: #ffffff;
+}
+
 .filters {
 	max-width: 1336px;
 	margin: 0 auto;
 	padding: 0 5px;
+
+	.ordering {
+		padding: 0;
+	}
 }
 
 .filters__header-container {
@@ -1592,6 +1713,13 @@ body {
 	text-transform: uppercase;
 	background-color: $primary-color-light-blue;
 	color: #ffffff;
+	transition: 200ms;
+}
+
+.filters__submit:hover {
+	background-color: $primary-color-dark-blue;
+	transition: 200ms;
+	cursor: pointer;
 }
 
 .filters__results {
