--- a/delivery/templates/delivery/base-generation.html
+++ b/delivery/templates/delivery/base-generation.html
@@ -28,7 +28,11 @@
                 <div class="trigram__line"></div>
             </div>
             <div class="header__options">
-                <a href="#" class="header__logout">logout</a>
+                {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}?next={{request.path}}" class="header__login">logout</a>
+                {% else %}
+                <a href="{% url 'login' %}?next={{request.path}}" class="header__login">login</a>
+                {% endif %}
                 <a href="" class="header__languages">languages</a>
                 <ul class="header__social-networks">
                     <li class="header__icon"><i class="fab fa-telegram-plane"></i></li>
