--- a/delivery/templates/delivery/news-single.html
+++ b/delivery/templates/delivery/news-single.html
@@ -43,26 +43,29 @@
 {% endif %}
 
 <div class="news-comments">
-    <div class="news-comments__title">Comments</div>
-    <form method="POST" class="news-comments__form">
-        {% csrf_token %}
-        <div class="news-comments__input-block news-comments__input-block_message">
-            <div class="news-comments__input-name">Message</div>
-            {{news_comment_form.message}}
-        </div>
-        <div class="news-comments__submit-block">
-            <input type="submit" class="news-comments__submit">
-        </div>
-    </form>
-
-    <ul class="news-comments__list">
-        {% for comment in news_content.news_comment.all %}
-        <li class="news-comments__item">
-            <div class="news-comments__pub-date">{{comment.pub_date}}</div>
-            <div class="news-comments__message">{{comment.message}}</div>
-        </li>
-        {% endfor %}
-    </ul>
+<div class="news-comments__title">Comments</div>
+{% if user.is_authenticated %}
+<form method="POST" class="news-comments__form">
+    {% csrf_token %}
+    <div class="news-comments__input-block news-comments__input-block_message">
+        <div class="news-comments__input-name">Message</div>
+        {{news_comment_form.message}}
+    </div>
+    <div class="news-comments__submit-block">
+        <input type="submit" class="news-comments__submit">
+    </div>
+</form>
+{% else %}
+<a class="news-comments__auth-error" href="{% url 'login' %}?next={{request.path}}">Please, sign in to write a comment</a>
+{% endif %}
+<ul class="news-comments__list">
+    {% for comment in news_content.news_comment.all %}
+    <li class="news-comments__item">
+        <div class="news-comments__pub-date">{{comment.pub_date}} by: <span class="news-comments__username">{{comment.user.username}}</span></div>
+        <div class="news-comments__message">{{comment.message}}</div>
+    </li>
+    {% endfor %}
+</ul>
 </div>
 
 <script src="{% static 'news_single.bundle.js' %}"></script>
