--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,10 @@
+{% extends "delivery/base-generation.html" %}
 {% load static %}
-
 {% block sidebar %}
 <header id="header" class="header header_news">
     <div class="logo">
         <img src="{% static 'images/logo.png' %}" alt="Logo">
-        <div class="logo__title">News</div>
+        <div class="logo__title">Login</div>
         <div class="logo__company-name">kallyas</div>
     </div>
     <div class="trigram" id="trigram">
@@ -13,11 +13,6 @@
         <div class="trigram__line"></div>
     </div>
     <div class="header__options">
-        {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}?next={{request.path}}" class="header__login">logout</a>
-        {% else %}
-        <a href="{% url 'login' %}?next={{request.path}}" class="header__login">login</a>
-        {% endif %}
         <a href="" class="header__languages">languages</a>
         <ul class="header__social-networks">
             <li class="header__icon"><i class="fab fa-telegram-plane"></i></li>
@@ -37,4 +32,40 @@
         </ul>
     </nav>
 </header>
+{% endblock %}
+
+{% block content %}
+<div class="login">
+    {% if form.errors %}
+    <div class="login__error">Your username and password didn't match. Please try again</div>
+    {% endif %}
+
+    {% if next %}
+    {% if user.is_authenticated %}
+    <div class="login__error">Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</div>
+    {% endif %}
+    {% endif %}
+
+    <form class="login-form" method="POST" action="{% url 'login' %}">
+        {% csrf_token %}
+        <div class="login-form__input-block">
+            <div class="login-form__label">
+                {{ form.username.label_tag }}
+            </div>
+            {{ form.username }}
+        </div>
+        <div class="login-form__input-block">
+            <div class="login-form__label">
+                {{ form.password.label_tag }}
+            </div>
+            {{ form.password }}
+        </div>
+        <input class="login-form__submit" type="submit" value="login" />
+        <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <div class="login__pass-reset"><a href="{% url 'password_reset' %}">Lost password?</a></div>
+</div>
 {% endblock %}
