--- a/delivery/templates/delivery/news-single.html
+++ b/delivery/templates/delivery/news-single.html
@@ -8,6 +8,9 @@
 {% endblock %}
 
 {% block content %}
+{% if comment_delete_res %}
+{{comment_delete_res}}
+{% endif %}
 <div class="news-single">
     <div class="news-single__title-image"><img src="{{news_content.title_image.url}}" alt=""></div>
     <div class="news-single__title">{{news_content.title}}</div>
@@ -15,6 +18,15 @@
     <div class="news-single__content">
         {{news_content.content|safe}}
     </div>
+    {% if perms.delivery.can_delete_news or user.pk == news_content.user.pk %}
+    <div id="delete-pop-up__link_news" class="news-single__delete">delete</div>
+    <div id="delete-pop-up_news" class="delete-pop-up">
+        <div class="delete-pop-up__warning">Are you sure you want to delete this news?</div>
+        <a href="{% url 'news_single_delete' pk=news_content.pk %}" id="delete-pop-up__confirmation_news"
+            class="delete-pop-up__confirmation">Yes</a>
+        <div id="delete-pop-up__cancel_news" class="delete-pop-up__cancel">Cancel</div>
+    </div>
+    {% endif %}
     <div class="news-single__tags">
         <div class="news-single__header">Tags</div>
         <ul class="news-single__tags-list">
@@ -43,29 +55,34 @@
 {% endif %}
 
 <div class="news-comments">
-<div class="news-comments__title">Comments</div>
-{% if user.is_authenticated %}
-<form method="POST" class="news-comments__form">
-    {% csrf_token %}
-    <div class="news-comments__input-block news-comments__input-block_message">
-        <div class="news-comments__input-name">Message</div>
-        {{news_comment_form.message}}
-    </div>
-    <div class="news-comments__submit-block">
-        <input type="submit" class="news-comments__submit">
-    </div>
-</form>
-{% else %}
-<a class="news-comments__auth-error" href="{% url 'login' %}?next={{request.path}}">Please, sign in to write a comment</a>
-{% endif %}
-<ul class="news-comments__list">
-    {% for comment in news_content.news_comment.all %}
-    <li class="news-comments__item">
-        <div class="news-comments__pub-date">{{comment.pub_date}} by: <span class="news-comments__username">{{comment.user.username}}</span></div>
-        <div class="news-comments__message">{{comment.message}}</div>
-    </li>
-    {% endfor %}
-</ul>
+    <div class="news-comments__title">Comments</div>
+    {% if user.is_authenticated %}
+    <form method="POST" class="news-comments__form">
+        {% csrf_token %}
+        <div class="news-comments__input-block news-comments__input-block_message">
+            <div class="news-comments__input-name">Message</div>
+            {{news_comment_form.message}}
+        </div>
+        <div class="news-comments__submit-block">
+            <input type="submit" class="news-comments__submit">
+        </div>
+    </form>
+    {% else %}
+    <a class="news-comments__auth-error" href="{% url 'login' %}?next={{request.path}}">Please, sign in to write a
+        comment</a>
+    {% endif %}
+    <ul class="news-comments__list">
+        {% for comment in news_content.news_comment.all %}
+        <li class="news-comments__item">
+            {% if perms.delivery.can_delete_news_comment or comment.user.pk == user.pk %}
+            <a href="{% url 'delete_news_comment' pk=comment.pk %}" class="news-comments__item-delete">Delete</a>
+            {% endif %}
+            <div class="news-comments__pub-date">{{comment.pub_date}} by: <span
+                    class="news-comments__username">{{comment.user.username}}</span></div>
+            <div class="news-comments__message">{{comment.message}}</div>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 
 <script src="{% static 'news_single.bundle.js' %}"></script>
