--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -33,39 +33,22 @@
     </nav>
 </header>
 {% endblock %}
-
 {% block content %}
 <div class="login">
     {% if form.errors %}
-    <div class="login__error">Your username and password didn't match. Please try again</div>
+    <div class="login__error">
+        {{form.errors}}
+    </div>
     {% endif %}
-
-    {% if next %}
-    {% if user.is_authenticated %}
-    <div class="login__error">Your account doesn't have access to this page. To proceed,
-        please login with an account that has access.</div>
-    {% endif %}
-    {% endif %}
-
-    <form class="login-form" method="POST" action="{% url 'login' %}">
+    <form method="POST" class="login-form">
         {% csrf_token %}
-
         {% for field in form %}
         <div class="login-form__input-block">
-            <div class="login-form__label">
-                {{ field.label_tag }}
-            </div>
-            {{ field }}
+            <div class="login-form__label">{{field.label_tag}}</div>
+            {{field}}
         </div>
         {% endfor %}
-        
-        <input class="login-form__submit" type="submit">
-        <input type="hidden" name="next" value="{{ next }}">
+        <input type="submit" class="login-form__submit">
     </form>
-
-    {# Assumes you setup the password_reset view in your URLconf #}
-    <div class="login__pass-reset"><a href="{% url 'password_reset' %}">Lost password?</a></div>
-
-    <a href="{% url 'registration' %}" class="login__register-link">Registration</a>
 </div>
 {% endblock %}
